--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 * {
-    margin: 10px;
+    margin: 15px;
 }
 
 body {
+    position: relative;
+    top: 130px;
     font-family: sans-serif;
 }
 
+.container {
+    width: 600px;
+    margin: 0 auto;
+}
+
 table {
-    margin: 10px;
+    margin: 20px auto;
 }
 
 td, th {
@@ -46,3 +53,30 @@ span {
     padding-right: 10px;
 }
 
+.buttons {
+    text-align: center;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    color: white;
+    background-color: black;
+    text-align: center;
+    line-height: 1.3;
+    padding: 20px;
+
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.2;
+    padding: 10px;
+    background-color: black;
+}
