--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ table {
 
 td, th {
     border: 1px solid white;
-    padding: 5px;
+    padding: 5px 10px;
     margin: 5px;
     color: white;
 }
@@ -66,7 +66,7 @@ span {
 
 #reset {
     display: block;
-    width: 120px;
+    width: 150px;
     margin: 30px auto;
 }
 
@@ -89,7 +89,21 @@ footer {
     color: white;
     text-align: center;
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 1.3;
     padding: 10px;
     background-color: black;
+}
+
+button {
+    font-size: 16px;
+    color: lime;
+    background-color: black;
+    border: 1px solid lime;
+    padding: 5px 15px;
+}
+
+button:hover {
+    color: red;
+    border-color: red;
+    transition: 0.2s;
 }
