--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ table {
 
 td, th {
     border: 1px solid white;
-    padding: 5px 10px;
+    padding: 7px 10px;
     margin: 5px;
     color: white;
 }
@@ -68,6 +68,16 @@ span {
     display: block;
     width: 150px;
     margin: 30px auto;
+}
+
+#status, #final_result {
+    width: 370px;
+    text-align: center;
+}
+
+.status_th {
+    width: 130px;
+    text-align: center;
 }
 
 header {
