--- a/resources/style.css
+++ b/resources/style.css
@@ -6,7 +6,7 @@ body {
     position: relative;
     top: 130px;
     font-family: sans-serif;
-    background-image: url("black-wallpaper-night-sky-7477.jpg");
+    background-image: url("./black-wallpaper-night-sky-7477.jpg");
     background-size: cover;
 }
 
